<resources>
    <string name="app_name">ShuttleBus</string>
    <string name="action_settings">Settings</string>


    <string name="account_name">帐号:</string>
    <string name="account_pwd">密码:</string>
    <string name="remember_pwd">记住密码</string>
    <string name="auto_login">自动登录</string>

    <string name="login">登录</string>

    <string name="domain_id">DomainID</string>
    <string name="pwd">Password</string>


    <string name="activity_home_tab_name">主页</string>
    <string name="activity_search_tab_name">搜索</string>
    <string name="activity_register_tab_name">注册</string>
    <string name="activity_user_tab_name">我的</string>

    <string name="check_in_success">成功登记</string>
    <string name="check_in">登記上車</string>
    <string name="error">Error</string>
    <string name="user_type">用户类型</string>
    <string name="oocl">OOCL</string>
    <string name="shuttle_bus">Shuttle Bus</string>
    <string name="user_login">退出</string>

    <string name="sweep_code_up_bus">扫码上车</string>
    <string name="view_bus_ticket">查看Ticket</string>

    <string name="complete">完成</string>



    <string name="bus_point">站点：</string>
    <string name="bus_line">路线：</string>
    <string name="type">类型：</string>



    <string name="account_error">账号密码不正确。</string>
    <string name="account_has_empty">请输入账号密码。</string>
    <string name="operation_failure">操作失败，请稍后再试。</string>
    <string name="server_not_avaiable">服务器忙，请稍后再试。</string>

    <string name="login_loading">Signing in...</string>
    <string name="please_wait">Please Wait...</string>

    <string name="route_type">上/下</string>
    <string name="bus_number">路线</string>
    <string name="vacant_site">空位</string>

    <string name="modify_date">选择有效日期</string>

    <string name="loading_tick">正在获取凭证...</string>
    <string name="show_tickets">乘车凭证</string>


    <string name="date_picker_title">选择有效日期</string>
    <string name="check_loading">Checking in...</string>
    <string name="has_not_ticket">您还没有登车凭证，请先登记。</string>

    <string name="register_success">恭喜您登记成功！</string>
    <string name="lack_of_seat">没有剩余空位,请联系HR</string>
    <string name="pls_input_manual_info">请先输入登记信息！</string>
    <string name="sorry_no_station">抱歉，没有路线经过此站点，请重新选择!</string>
    <string name="pls_select_station_first">请先选择您的乘车站点。</string>
    <string name="back">返回</string>
    <string name="date_picker_title_serarch">选择查询日期</string>
</resources>
